# Argos

./: .gitignore  Cargo.toml  argos.db  run.sh  update_argos.sh
argos-cli/: Cargo.toml  USAGE.md
argos-cli/src/: cli.rs  command_handler.rs  commands.rs  config.rs  error.rs  main.rs  output.rs
argos-cli/src/commands/: compare.rs  config.rs  history.rs  list.rs  live.rs  mod.rs  monitor.rs  sample.rs  tag.rs  watchdog.rs
argos-cli/src/handlers/: compare.rs  config.rs  family.rs  list.rs  live.rs  mod.rs  monitor.rs  sample.rs  tui.rs  watchdog.rs
argos-core/: Cargo.toml  diesel.toml
argos-core/src/: errors.rs  lib.rs  mapping.rs  models.rs  schema.rs  validation.rs
argos-core/src/commands/: mod.rs  types.rs
argos-core/src/commands/compare/: by_file.rs  by_pid.rs  mod.rs
argos-core/src/commands/family/: mod.rs
argos-core/src/commands/kill/: mod.rs
argos-core/src/commands/list/: mod.rs
argos-core/src/commands/live/: mod.rs
argos-core/src/commands/monitor/: mod.rs
argos-core/src/commands/sampling/: mod.rs
argos-core/src/commands/watchdog/: mod.rs
argos-core/src/db/: log_session.rs  manager.rs  mod.rs  process.rs  sample.rs  schema.rs
argos-core/src/process/: mod.rs  model.rs  reader.rs  transform.rs
argos-core/src/process_monitor/: mod.rs  sampling.rs  snapshot.rs  types.rs
argos-core/src/users/: mod.rs  types.rs  utils.rs
argos-core/src/utils/: mod.rs  process.rs
argos-export/: Cargo.toml
argos-export/src/: error.rs  lib.rs  process.rs  samples.rs  util.rs
argos-tui/: Cargo.toml
argos-tui/src/: app.rs  layout.rs  lib.rs  run.rs  search.rs  stats.rs
docs/dev/: ERS.qmd  functions.qmd
(+12 files in other folders)
