[package]
name = "argos-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
argos-core = { path = "../argos-core" }
argos-export = { path = "../argos-export" }
argos-tui = { path = "../argos-tui" }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
env_logger = "0.11"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = { version = "0.30", features = ["multithread"] }
csv = "1.3"
ctrlc = "3.4.7"
dirs = "6.0.0"
