[package]
name = "argos-core"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo = { version = "0.30", features = ["multithread"] }
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono"] }
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.16"
serde = { version = "1.0.219", features = ["derive"] }


